# pyb2d

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  README.md  README.rst  azure-pipelines.yml  batch_api.html  bodies.html  bump.sh  callbacks.html  debug_draw.html  dev-requirements.yml  environment.yml  examples.html  genindex.html  index.html  introduction.html  joints.html  objects.inv  particles.html  pyb2d.html  pybox2d-dev-requirements.yml  pybox2d.pc.in  pybox2dConfig.cmake.in  search.html  searchindex.js  setup.py  world.html
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_docs.yml  main.yml  pip.yaml  pip.yml  wheels.yml
_downloads/038fbf6219eae6c969a1174f0a671947/: plot_blender.ipynb
_downloads/1045b917821b2751573c49bc643a0d83/: plot_billiard.ipynb
_downloads/18fba94d2add7aeb6548f8dc389d1ce1/: plot_prismatic_joint.ipynb
_downloads/1dc6ec7ec601f6df5659ed5a79b267e1/: plot_gauss_machine.ipynb
_downloads/21448c802e8da6a9419a916ceb01a30b/: plot_tutorial_0.1.ipynb
_downloads/241c29629415b8e550a73a9ed7e58fd9/: plot_rocket.ipynb
_downloads/27763af89303f350f8b7956076641cdd/: plot_weld_joint.py
_downloads/307810945b3383fc5991988bad489d53/: plot_wheel_joint.ipynb
_downloads/31c33e3426f7ba70c0b281fd433d8144/: plot_pully_joint.ipynb
_downloads/449f5beb84d052ac4146fc2c1e63509d/: plot_distance_joint.py
_downloads/47a0ed99489f2ad7708ab9f99b132c17/: plot_angry_shapes.py
_downloads/4d4cb421f43e56a149313d3b9b9fdde1/: plot_billiard.py
_downloads/57668d783319797eb864d9a667ffde9c/: plot_color_mixing.py
_downloads/63ea3adb9a49116a523b4f1858d5dcfa/: plot_angry_shapes.ipynb
_downloads/656d9829c781dd577100f22433e6202b/: plot_randomized_linear_emitter.ipynb
_downloads/7d60ddbf88d35561044bff655e624414/: plot_tutorial_0.0.ipynb
_downloads/860dba7e23b653840961905c6eca81f5/: plot_blender.py
_downloads/8d39a2e748fd576597a98b4debbeaa5d/: plot_weld_joint.ipynb
_downloads/8d9129af563934816ef9b1b221817773/: plot_elliptic_billiard_table.ipynb
_downloads/9161a7f961c69e5cc4e2174802080576/: plot_prismatic_joint.py
_downloads/a2c29c2f60f02502a4668db8f864d618/: plot_revolute_joint.ipynb
_downloads/a7bc45d797e5300bb3bac4472f251dd7/: plot_newtons_cradle.ipynb
_downloads/aa564cf981c5198788c4d0b58f720d0b/: plot_goo.ipynb
_downloads/baa38a02a9eb0cf683c20652170517e2/: plot_color_mixing.ipynb
_downloads/c509cf5a43a766a3d8343e43da4c5362/: plot_rocket.py
_downloads/c5cfc607de543eda6249b018ef5c9269/: plot_raycast.py
_downloads/cef78f6a2e34772e9ab87f0f2b47e20d/: plot_distance_joint.ipynb
_downloads/d1cf8eaaaab803f9d52ef729949ee7e6/: plot_revolute_joint.py
_downloads/dabcff5cce4d5f0f6c1444599b1a9154/: plot_raycast.ipynb
_downloads/e6fe422f8ec95ccb186d526f9c414fb0/: plot_function_shape.ipynb
_downloads/f7f9412fe395a035a0cdc578d62bff54/: plot_elliptic_billiard_table.py
_sources/: debug_draw.rst.txt  index.rst.txt  joints.rst.txt  particles.rst.txt  pyb2d.rst.txt  world.rst.txt
_sources/auto_examples/: index.rst.txt  plot_angry_shapes.rst.txt  plot_function_shape.rst.txt  sg_execution_times.rst.txt
_sources/tutorials/: index.rst.txt  plot_tutorial_0.0.rst.txt  plot_tutorial_0.1.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html  plot_angry_shapes.html  plot_function_shape.html  sg_execution_times.html
benchmark/: CMakeLists.txt  benchmark_pybox2d.cpp
cmake/modules/: FindNUMPY.cmake
debug_draw/: index.html
docker/: Dockerfile
docs/: .gitignore  CMakeLists.txt  Doxyfile  batch_api.rst  bodies.rst  callbacks.rst  conf.py  examples.rst  index.rst  joints.rst  particles.rst  pyb2d.rst  requirements.txt
docs/debug_draw/: index.rst
examples/: blender.py  color_mixing.py  function_shape.py  gauss_machine.py  hello_world.cpp  hello_world.ipynb  jupyter.ipynb  jupyter_integration.ipynb  newton_cradle.py  newtons_cradle.py  plot_angry_shapes.py  plot_billiard.py  plot_blender.py  plot_color_mixing.py  plot_elliptic_billiard_table.py  plot_function_shape.py  plot_gauss_machine.py  plot_goo.py  plot_newtons_cradle.py  plot_raycast.py  plot_rocket.py  plot_world_of_goo_homage.py  pybox2d_version.cpp  render_all.py  run_all.py  test_all.py
examples/goo/: geometry.py  goos.py  items.py  level.py  query.py  utils.py  world_of_goo_homage.py
examples/jupyter/: billard.ipynb  billiard.ipynb
include/pybox2d/: pybox2d.hpp  pybox2d_config.hpp  pybox2d_version_major.hpp  pybox2d_version_minor.hpp  pybox2d_version_patch.hpp
new_examples/: angry_circles.py  color_mixing.py  extendd_shapes.py  function_shape.py  gauss_machine.py  jupyter.ipynb  jupyter_runner.ipynb  lf.py  quantstack.py
new_examples/testbed/: testbed_base.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  ani.ipynb  batch.ipynb  bridge.ipynb  bridge5.ipynb  ipycanvas.ipynb
python/: CMakeLists.txt
python/src/: CMakeLists.txt  b2Body.cxx  b2Collision.cxx  b2Contact.cxx  b2Draw.cxx  b2Fixture.cxx  b2Joint.cxx  b2JointDef.cxx  b2Math.cxx  b2Particle.cxx  b2ParticleGroup.cxx  b2ParticleSystem.cxx  b2Shape.cxx  b2World.cxx  b2WorldCallbacks.cxx  b2_user_settings.cpp  b2_user_settings.h  batch_api.cxx  batch_debug_draw_caller.hxx  batch_debug_draw_old.hxx  box2d_wrapper.hpp  container.hxx  def_build_config.cpp  export_batch_debug_draw.cxx  helper.hxx  holder.hxx  main.cpp  numpy.hxx  numpyb2Draw.hxx  pyEmitter.cxx  pyb2Draw.hxx  pyb2WorldCallbacks.hxx  pybox2d.cxx  pyworld.hxx  recordingb2Draw.hxx  user_data.hxx  vertices.hxx
python/src/apis/: debug_draw_api.hxx  get_next_api.hxx  user_data_api.hxx
python/src/debug_draw/: batch_debug_draw_caller.hxx  batch_debug_draw_old.hxx  extended_debug_draw_base.hxx  pyb2Draw.hxx
python/src/extensions/: b2Emitter.cpp  b2Emitter.h  pyworld.hxx
python/tests/: callbacks.py  (+7 more)
recipe/: bld.bat  meta.yaml
test/: CMakeLists.txt  test_pybox2d_config.cpp
testbed/: main.py
tutorials/: README.rst  index.html  plot_tutorial_0.0.html  plot_tutorial_0.0.py  plot_tutorial_0.1.html  plot_tutorial_0.1.py  sg_execution_times.html
(+148 files in other folders)
